update about.html to contain a rant on what I want to see changed on the internet
In short: Fuck the normies that have ruined the internet, fuck the LGBT virtue signalling coompanies (lmao) that have a grip on us and fuck the right winging shitheads that just ruin everything else.

PS: Fuck nazis and commies too. You retards have held us back too.

--- a/pages/about.html
+++ b/pages/about.html
@@ -22,8 +22,7 @@
 	<header>
 		<div id=banner-logo>
 			<a href="/">
-				<img height=111 width=111 src="/images/logo.svg"
-					alt="main logo consisting of a checkerboard pattern" />
+				<img height=111 width=111 src="/images/logo.svg" alt="main logo consisting of a checkerboard pattern" />
 			</a>
 		</div>
 		<div id=banner-text>
@@ -55,32 +54,88 @@
 	</nav>
 
 	<main>
+		<h2>About</h2>
 		<section>
-			<h2>About</h2>
-			<section>
-				<h3>Thaumatorium</h3>
-				<p>Based on the word <i>thaumaturge</i>, meaning <i>miracle worker</i></p>
-			</section>
-			<section>
-				<h3>The author</h3>
-				<p>I'm someone who's sick of the state of the web and you know what they say: </p>
-				<blockquote>Improve the world, start with yourself - <a
-						href="https://nl.wikipedia.org/wiki/Bond_zonder_Naam">Bond
-						Zonder Naam</a></blockquote>
-				<p>This is why I started with the basics: HTML, CSS and JS. Anything else is deemed <i>bloat</i></p>
-			</section>
-			<section>
-				<h3>About Thaumatorium</h3>
-				We are:
-				<ul>
-					<li>Dutch</li>
-					<li>Smart</li>
-					<li>Tall</li>
-					<li>Cheese lovers (well, some of us are)</li>
-					<li>Not nearly as America-philes as we used to be</li>
-					<li>Sick of bloat in software</li>
-				</ul>
-			</section>
+			<h3>NostraDavid, the author</h3>
+			<p>I'm someone who's sick of the state of the web and you know what they say: </p>
+			<blockquote>Improve the world, start with yourself - <a href="https://nl.wikipedia.org/wiki/Bond_zonder_Naam">Bond
+					Zonder Naam</a></blockquote>
+			<p>This is why I started with the basics: HTML, CSS and JS. Anything else is deemed <i>bloat</i></p>
+		</section>
+		<section>
+			<h3>Thaumatorium</h3>
+			<h4>The name</h4>
+			<p>It's based on the word <i>thaumaturge</i>, meaning <i>miracle worker</i>, thus <em>Thaumatorium</em> is where
+				miracles are performed.</p>
+			<h4>The reason</h4>
+			<p>I wanted a place where I could post my articles, but I found my free <a
+					href="https://thaumatorium.wordpress.com/">Wordpress site</a> too slow, too bloated, too messy, so I started
+				to search for a way to still create and host articles, without needing bloat like Wordpress.</p>
+			<p>I started with thinking about using something like Angular and React. They were the hot new thing in town, so
+				why not try that? Turns out they both have a tendency to become pretty damn complex pretty damn fast - that's
+				my personal experience anyway.</p>
+			<p>After finding Elm, a Haskell-like language that compiles to JS I though to use that as it promised small and
+				(more importantly) <em>fast</em> websites.</p>
+			<p>After learning the creator wasn't the... most cooperating of persons I decided to move on before even
+				clashing with him.</p>
+			<p>I quickly found the Blazor beta, which seemed promising, especially in the PWA department. Downsides: the
+				output is rather huge (4MB+ in size) and the code is based on the Mono lib, not the fastest of libs.</p>
+			<p>So I ended up thinking: What's left after removing <em>all and anything</em> bloat? HTML. CSS. JS... So why
+				not create my site in that? So I set out to create a PWA - a single HTML page that contains the whole site.
+			</p>
+			<p>The site quickly grew too big for this, so I changed it up by splitting the site in separate HTML pages, but
+				<code>index.html</code> contained the generic header/footer HTML, while the other HTML files contained the
+				articles.</p>
+			<p>In doing so - splitting the site, but mostly handling things like a PWA - I broke the back/forward buttons
+				and browser history...</p>
+			<p>In the end I decided in writing just separate HTML pages, which means I have a bunch of duplicate HTML, but
+				I'm OK with that, as I know enough R<sup>E</sup>G<sub>E</sub>X to edit <em>all</em> HTML headers in one fell
+				swoop!</p>
+			<h4>What else</h4>
+			<p>I'm pretty fucking sick of all the political bullshit/polarisation I see online, so miss me with that shit.
+			</p>
+			<p>That is why on my future news aggregator I'm completely forbidding that bullshit.</p>
+			<p>There's a lot more that I'm going to forbid, but I think that's one of the big ones - one you <em>don't</em>
+				see on other sites, unlike the stereotypical "no racism, hate, etc" virtue signalling bullshit.</p>
+			<p>Yes, I also hate Virtue Signalling month of June. LGBT all of a sudden matters to giant corporations.
+				Corporations that don't give a fuck about the places where it <em>actually</em> matters:</p>
+			<figure>
+				<img src=/images/virtue-signalling.jpg
+					alt="Bethesda Softworks LLC showing an LGBT logos for their Twitter accounts in the Netherlands, Japan, Australia, United Kingdom, Germany and France, but not for their Russia, Turkey and Middle East accounts">
+				<figcaption>The source of this image is <a
+						href="https://twitter.com/RudyHavenstein/status/1275833222170107904">@RudyHavenstein</a></figcaption>
+
+			</figure>
+			<p>I fucking loathe hypocritical behavior like that. They're basically lying to their western customers, acting
+				as if they're doing good, while only changing the icon in the place that already legally and socially accept
+				LGBT humans.</p>
+			<p>Ooh! I got another thing: The New York Times is now going to <a
+					href="https://www.nytco.com/press/uppercasing-black/">Uppercase the word Black</a>, because that's truly
+				what black Americans care about...</p>
+			<p>They want the USA police to not be trash and to stop killing them, you stupid fucking cunts. They don't give
+				a fuck you're uppercasing
+				the word 'Black'.</p>
+			<p>Right-wing extremists may have taken over the 'clown world' meme, but sometimes I truly believe we live in a
+				fucking clown's world 🤡 HONK HONK, MOTHERFUCKERS!</p>
+			<p>Anyway, I'm thinking about banning Americans from my site too. I'm not going to accept people who are
+				retarded. People with mental disabilities are still welcome, ofcourse.</p>
+			<p>I'm also just so fucking done with racist shitheads that think it's OK to act racist against white humans,
+				because they are part of some minority</p>
+			<p>PS: The definition of the word "Racism" is NOT "power + prejudice". That's a bullshit definition that should
+				stay in the trashheap that is sociology. I'll fucking yeet you from my site if you pull that shit on people
+				too.</p>
+			<p>PPS: Right-wingers may now start to get the idea I'm /their guy/. I'm not. Stop being obnoxious retards.</p>
+			<h4>The cure</h4>
+			<p><q>Great minds discuss ideas, average minds discuss events, small minds discuss people.</q> &ndash; Eleanor
+				Roosevelt</p>
+			<p>We (the internet at large) are too busy with discussing people, not even events. I want to see the internet
+				move <em>back</em> to discussing ideas. That was more the case on Reddit back in the days - <a
+					href="https://web.archive.org/web/20081229163556/https://reddit.com/">Reddit on 2008-12-29</a> was much more
+				about ideas, not events or people.</p>
+			<p>The normies have invaded the internet. That's not necessarily bad, but what is is that they came in such
+				numbers they did not need to adapt to our netizenship and changed our internet culture. <em>For the worse</em>,
+				mind you. I hope to one day have enough influence to change that, for the betterment of humanity.</p>
+
 		</section>
 	</main>
 
