--- a/pages/projects.html
+++ b/pages/projects.html
@@ -151,7 +151,7 @@
 						<p>Some systems define a slug as the part of a URL that identifies a page in human-readable
 							keywords.
 						</p>
-					</blockquote> - <a href=https://en.wikipedia.org/wiki/Clean_URL#Slug>wikipedia</a>
+					</blockquote> &ndash; <a href=https://en.wikipedia.org/wiki/Clean_URL#Slug>wikipedia</a>
 					<section>
 						<h3>Slugify</h3>
 						<label>input:<textarea id=slugify_in></textarea></label>
