--- a/pages/about.html
+++ b/pages/about.html
@@ -120,7 +120,7 @@
 			<p>Anyway, I'm thinking about banning Americans from my site too. I'm not going to accept people who are
 				retarded. People with mental disabilities are still welcome, ofcourse.</p>
 			<p>I'm also just so fucking done with racist shitheads that think it's OK to act racist against white humans,
-				because they are part of some minority</p>
+				because they are part of some minority &ndash; I'm looking at you WaPo, hiring Sarah Jeong and Karen Attiah. Fuck you too.</p>
 			<p>PS: The definition of the word "Racism" is NOT "power + prejudice". That's a bullshit definition that should
 				stay in the trashheap that is sociology. I'll fucking yeet you from my site if you pull that shit on people
 				too.</p>
