Add Ko-fi support link; add tool list to homepage
It rhymes with No-fee

--- a/index.html
+++ b/index.html
@@ -133,6 +133,24 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 							site</del></li>
 				</ul>
 			</section>
+			<section>
+				<h2>Tools</h2>
+				<p>Online tools that I regularly use</p>
+				<ul>
+					<li><a href="https://jakearchibald.github.io/svgomg/">SVGOMG</a></li>
+					<li><a href="https://boxy-svg.com/app/">Boxy SVG editor</a></li>
+				</ul>
+			</section>
+			<section>
+				<h2>Support</h2>
+
+				<figure style="display: inline-block">
+					<a href=https://ko-fi.com/J3J61VMSC target=_blank>
+						<img loading=lazy width=223 height=30 src="/images/ko-fi-support.svg" alt='Buy Me a Coffee at ko-fi.com' />
+					</a>
+					<figcaption>Why yes, that <em>is</em> a custom Ko-fi button,<br> based on one that <a href="https://www.ko-fi.com/img/githubbutton_sm.svg">Ko-fi provided</a>,<br> but optimized AF. Why do you ask?</figcaption>
+				</figure>
+			</section>
 		</article>
 	</main>
 
