--- a/index.html
+++ b/index.html
@@ -36,9 +36,38 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 	<link async rel=stylesheet href="/styles/nav.css?v=1" />
 	<link async rel=stylesheet href="/styles/main.css?v=1" />
 	<link async rel=stylesheet href="/styles/footer.css?v=1" />
+
+
+	<meta property="fb:app_id" content="939311653206712">
+	<meta property="og:url" content="http://thaumatorium.com/" />
+	<meta property="og:type" content="homepage" />
+	<meta property="og:title" content="When Great Minds Don’t Think Alike" />
+	<meta property="og:description" content="How much does culture influence creative thinking?" />
+	<meta property="og:image"
+		content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
+
 </head>
 
 <body>
+	<script>
+		window.fbAsyncInit = () => {
+			FB.init({
+				appId: '939311653206712',
+				cookie: true,
+				xfbml: true,
+				version: 'v7.0'
+			});
+			FB.AppEvents.logPageView();
+		};
+
+		((d, s, id) => {
+			let fjs = d.getElementsByTagName(s)[0];
+			if (d.getElementById(id)) { return; }
+			let js = d.createElement(s); js.id = id;
+			js.src = "https://connect.facebook.net/en_US/sdk.js";
+			fjs.parentNode.insertBefore(js, fjs);
+		})(document, 'script', 'facebook-jssdk');
+	</script>
 	<header>
 		<div id=banner-logo>
 			<a href="/">
@@ -74,6 +103,9 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 	</nav>
 
 	<main>
+		<button onclick='FB.AppEvents.logEvent("buttonClicked")'>
+			Click me
+		</button>
 		<article>
 			<section>
 				<h2>Welcome to the Thaumatorium!</h2>
@@ -148,7 +180,9 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 					<a href=https://ko-fi.com/J3J61VMSC target=_blank>
 						<img loading=lazy width=223 height=30 src="/images/ko-fi-support.svg" alt='Buy Me a Coffee at ko-fi.com' />
 					</a>
-					<figcaption>Why yes, that <em>is</em> a custom Ko-fi button,<br> based on one that <a href="https://www.ko-fi.com/img/githubbutton_sm.svg">Ko-fi provided</a>,<br> but optimized AF. Why do you ask?</figcaption>
+					<figcaption>Why yes, that <em>is</em> a custom Ko-fi button,<br> based on one that <a
+							href="https://www.ko-fi.com/img/githubbutton_sm.svg">Ko-fi provided</a>,<br> but optimized AF. Why do you
+						ask?</figcaption>
 				</figure>
 			</section>
 		</article>
