improve opengraph; add opengraph cover image

--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 
 	<meta property="fb:app_id" content="939311653206712">
 	<meta property="og:url" content="http://thaumatorium.com/" />
-	<meta property="og:type" content="homepage" />
-	<meta property="og:title" content="When Great Minds Don’t Think Alike" />
-	<meta property="og:description" content="How much does culture influence creative thinking?" />
-	<meta property="og:image"
-		content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
+	<meta property="og:type" content="website" />
+	<meta property="og:title"
+		content="The Thaumatorium: Where the magic happens" />
+	<meta property="og:description" content="Eleanor
+	Roosevelt said: &quot;Great minds discuss ideas, average minds discuss events, small minds discuss people.&quot; &ndash; Do the former, not the latter." />
+	<meta property="og:image" content="https://thaumatorium.com/images/opengraph-cover.png" />
 
 </head>
 
