fix 'redirect path' error in opengraph data

--- a/index.html
+++ b/index.html
@@ -39,12 +39,11 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 
 
 	<meta property="fb:app_id" content="939311653206712">
-	<meta property="og:url" content="http://thaumatorium.com/" />
+	<meta property="og:url" content="https://thaumatorium.com/" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title"
-		content="The Thaumatorium: Where the magic happens" />
-	<meta property="og:description" content="Eleanor
-	Roosevelt said: &quot;Great minds discuss ideas, average minds discuss events, small minds discuss people.&quot; &ndash; Do the former, not the latter." />
+	<meta property="og:title" content="The Thaumatorium: Where the magic happens" />
+	<meta property="og:description"
+		content="Eleanor Roosevelt said: &quot;Great minds discuss ideas, average minds discuss events, small minds discuss people.&quot; &ndash; Do the former, not the latter." />
 	<meta property="og:image" content="https://thaumatorium.com/images/opengraph-cover.png" />
 
 </head>
