add comment explaining what to do with OpenGraph data in the future

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 	<link async rel=stylesheet href="/styles/footer.css?v=1" />
 
 
+	<!-- If I ever make this site dynamically: FB uses a specific agent string (something like 'facebookexternalhit/1.1'). No need to show this to regular users. -->
 	<meta property="fb:app_id" content="939311653206712">
 	<meta property="og:url" content="https://thaumatorium.com/" />
 	<meta property="og:type" content="website" />
