add Twitter metadata

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 
 	<!-- If I ever make this site dynamically: FB uses a specific agent string (something like 'facebookexternalhit/1.1'). No need to show this to regular users. -->
 	<meta property="fb:app_id" content="939311653206712">
+
+	<!-- General OpenGraph data - shared between Facebook and Twitter -->
 	<meta property="og:url" content="https://thaumatorium.com/" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="The Thaumatorium: Where the magic happens" />
@@ -47,6 +49,14 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 		content="Eleanor Roosevelt said: &quot;Great minds discuss ideas, average minds discuss events, small minds discuss people.&quot; &ndash; Do the former, not the latter." />
 	<meta property="og:image" content="https://thaumatorium.com/images/opengraph-cover.png" />
 
+	<!-- Twitter-only stuff -->
+	<meta name="twitter:card" content="summary" />
+	<meta name="twitter:site" content="@DavidNostra" />
+	<meta name="twitter:creator" content="@DavidNostra" />
+	<meta name="twitter:title" content="The Thaumatorium: Where the magic happens">
+	<meta name="twitter:description"
+		content="Eleanor Roosevelt said: &quot;Great minds discuss ideas, average minds discuss events, small minds discuss people.&quot; &ndash; Do the former, not the latter.">
+	<meta name="twitter:image" content="https://thaumatorium.com/images/opengraph-cover.png">
 </head>
 
 <body>
