--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- Since I'm used to writing en-US, I'll probably make mistakes in this document. Oh well. -->
 <html lang="en-GB">
 
-<head>
+<head prefix="og: http://ogp.me/ns#">
 	<!--a
 This file is UTF-8 with BOM (Byte Order Mark) - If you're using a decent editor, you can also see this in the status bar (at the bottom of the window) - 
 This means that the meta tag with charset=utf8 isn't needed.
@@ -36,7 +36,6 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 	<link async rel=stylesheet href="/styles/nav.css?v=1" />
 	<link async rel=stylesheet href="/styles/main.css?v=1" />
 	<link async rel=stylesheet href="/styles/footer.css?v=1" />
-
 
 	<!-- If I ever make this site dynamically: FB uses a specific agent string (something like 'facebookexternalhit/1.1'). No need to show this to regular users. -->
 	<meta property="fb:app_id" content="939311653206712">
