add OpenGraph image size

--- a/index.html
+++ b/index.html
@@ -202,7 +202,13 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 			<abbr
 				title="Copyright is implicit, almost anywhere in the world! If you want to know more, wikipedia 'Berne Convention'"
 				style="text-decoration: none; color: #800;">Thaumatorium</abbr>
-
+		</div>
+		<div>
+			<a href="https://twitter.com/DavidNostra">Twitter profile</a>
+			<a href="https://github.com/NostraDavid">GitHub (personal)</a>
+			<a href="https://github.com/Thaumatorium">GitHub (professional)</a>
+			<a href="https://www.facebook.com/david.nostra.121">Facebook profile</a>
+			<a href="https://www.reddit.com/user/nostradavid">Reddit profile</a>
 		</div>
 		<!-- Sssh - don't tell anyone! -->
 		<a class=secret onclick=specialGoto(event)
