force OpenGraph cover update; add OpenGraph image sizes

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 	<meta property="og:title" content="The Thaumatorium: Where the magic happens" />
 	<meta property="og:description"
 		content="Eleanor Roosevelt said: &quot;Great minds discuss ideas, average minds discuss events, small minds discuss people.&quot; &ndash; Do the former, not the latter." />
-	<meta property="og:image" content="https://thaumatorium.com/images/opengraph-cover.png" />
+	<meta property="og:image" content="https://thaumatorium.com/images/opengraph-cover.png?v=1" />
+	<meta property="og:image:width" content="1280" />
+	<meta property="og:image:height" content="668" />
 
 	<!-- Twitter-only stuff -->
 	<meta name="twitter:card" content="summary" />
@@ -55,7 +57,9 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 	<meta name="twitter:title" content="The Thaumatorium: Where the magic happens">
 	<meta name="twitter:description"
 		content="Eleanor Roosevelt said: &quot;Great minds discuss ideas, average minds discuss events, small minds discuss people.&quot; &ndash; Do the former, not the latter.">
-	<meta name="twitter:image" content="https://thaumatorium.com/images/opengraph-cover.png">
+	<meta name="twitter:image" content="https://thaumatorium.com/images/opengraph-cover.png?v=1">
+	<meta name="twitter:image:width" value= "1280" />
+	<meta name="twitter:image:height" value= "668" />
 </head>
 
 <body>
