fix footer nav links

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 	<meta name="twitter:description"
 		content="Eleanor Roosevelt said: &quot;Great minds discuss ideas, average minds discuss events, small minds discuss people.&quot; &ndash; Do the former, not the latter.">
 	<meta name="twitter:image" content="https://thaumatorium.com/images/opengraph-cover.png?v=1">
-	<meta name="twitter:image:width" value= "1280" />
-	<meta name="twitter:image:height" value= "668" />
+	<meta name="twitter:image:width" value="1280" />
+	<meta name="twitter:image:height" value="668" />
 </head>
 
 <body>
@@ -207,13 +207,17 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 				title="Copyright is implicit, almost anywhere in the world! If you want to know more, wikipedia 'Berne Convention'"
 				style="text-decoration: none; color: #800;">Thaumatorium</abbr>
 		</div>
-		<div>
-			<a href="https://twitter.com/DavidNostra">Twitter profile</a>
-			<a href="https://github.com/NostraDavid">GitHub (personal)</a>
-			<a href="https://github.com/Thaumatorium">GitHub (professional)</a>
-			<a href="https://www.facebook.com/david.nostra.121">Facebook profile</a>
+		<nav>
 			<a href="https://www.reddit.com/user/nostradavid">Reddit profile</a>
-		</div>
+			<span> - </span>
+			<a href="https://twitter.com/DavidNostra">Twitter profile</a>
+			<span> - </span>
+			<a href="https://github.com/NostraDavid">GitHub (personal)</a>
+			<span> - </span>
+			<a href="https://github.com/Thaumatorium">GitHub (professional)</a>
+			<span> - </span>
+			<a href="https://www.facebook.com/david.nostra.121">Facebook profile</a>
+		</nav>
 		<!-- Sssh - don't tell anyone! -->
 		<a class=secret onclick=specialGoto(event)
 			style="text-decoration: none; color:#800; cursor: default;font-family: sans-serif; font-size: small;">&#960;</a>
