--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 	<meta property="og:image:height" content="668" />
 
 	<!-- Twitter-only stuff -->
-	<meta name="twitter:card" content="summary" />
+	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:site" content="@DavidNostra" />
 	<meta name="twitter:creator" content="@DavidNostra" />
 	<meta name="twitter:title" content="The Thaumatorium: Where the magic happens">
