--- a/index.html
+++ b/index.html
@@ -149,7 +149,10 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 			<section>
 				<h2>TODO</h2>
 				<ul>
-
+					<li>Add JSON/LD - Semantic Web stuff to the homepage</li>
+					<li>Verify that posts on Facebook/Twitter/Reddit look good</li>
+					<li>Consider paypal.me</li>
+					<li>Consider Google Analytics - probably not though</li>
 					<li>Check my Spark files for article inspiration. I believe I was still going to write a letter to myself in
 						2009 (about how and where to start with programming)</li>
 					<li>Gotta check out ARIA tags - they weren't really mentioned on WHATWG's Living Document</li>
