improve welcoming text

--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 			<section>
 				<h2>Welcome to the Thaumatorium!</h2>
 				<p>
-					This is my personal website, where I write my personal thoughts and post my little projects.
+					This is my personal, <strong>handcrafted</strong>, website, where I write my personal thoughts and post my
+					little projects.
 				<p>
 					Note that this site is pure uncompressed HTML/CSS/JS, with some PNG and WEBP images to fluff
 					shit up. I like to think that <strong>this is how the web is supposed to be</strong>, other than that these
