add gtag - FB tag has already been removed

--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 </head>
 
 <body>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-169207994-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+	
+		gtag('config', 'UA-169207994-1');
+	</script>
+
 	<header>
 		<h1 class=title>The Thaumatorium:</h1>
 		<div class=subtitle>Where the magic happens</div>
