--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 				<h2>Support</h2>
 
 				<figure style="display: inline-block">
-					<a href=https://ko-fi.com/J3J61VMSC target=_blank>
+					<a href=https://ko-fi.com/J3J61VMSC rel=noopener target=_blank>
 						<img loading=lazy width=223 height=30 src="/images/ko-fi-support.svg" alt='Buy Me a Coffee at ko-fi.com' />
 					</a>
 					<figcaption>Why yes, that <em>is</em> a custom Ko-fi button,<br> based on one that <a
