add 3 BatMetal videos to the random-video page

--- a/pages/random-video.html
+++ b/pages/random-video.html
@@ -74,7 +74,9 @@
 				{ url: "4MrnC5eZp_c", comment: "ARTHUR!" },
 				{ url: "3GRSbr0EYYU", comment: "FENTOOOOOOON!" },
 				{ url: "rY-FJvRqK0E", comment: "Another meme song that's actually pretty dope too!" },
-				
+				{ url: "qatmJtIJAPw", comment: "Original song is 'Dethklok - Face Fisted'" },
+				{ url: "I53HDr0-Qew", comment: "Original song is 'Dethklok - Murmaider'" },
+				{ url: "SDea7laHD4E", comment: "Original song is 'Small's Galaktikon II: Become the Storm - My Name is Murder'" },
 				// { url: "HgEUbSzOTZ8", comment: `"We Are Trained Marxists" - Patrisse Cullors, Co-Founder, #BlackLivesMatter` },
 			];
 
