--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 	<link async rel=stylesheet href="/styles/nav.css?v=1" />
 	<link async rel=stylesheet href="/styles/main.css?v=1" />
 	<link async rel=stylesheet href="/styles/footer.css?v=1" />
+	<link async rel=stylesheet href="/styles/cookie.css?v=1" />
 
 	<!-- If I ever make this site dynamically: FB uses a specific agent string (something like 'facebookexternalhit/1.1'). No need to show this to regular users. -->
 	<meta property="fb:app_id" content="939311653206712">
@@ -66,9 +67,9 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-169207994-1"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
+		function gtag() { dataLayer.push(arguments); }
 		gtag('js', new Date());
-	
+
 		gtag('config', 'UA-169207994-1');
 	</script>
 
@@ -208,18 +209,12 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 		<!-- Sssh - don't tell anyone! -->
 		<a class=secret onclick=specialGoto(event)
 			style="text-decoration: none; color:#800; cursor: default;font-family: sans-serif; font-size: small;">&#960;</a>
+		<div class=cookie-notification>
+			<p>This site uses cookies from Google to deliver its services and to analyze traffic.</p>
+			<button>OK</button>
+		</div>
 	</footer>
 	<script async src=pwa.js></script>
-	<script>
-		let ty = document.getElementById("target-year");
-		ty.innerHTML = new Date().getFullYear() + 10000;
-
-		const specialGoto = (event) => {
-			if (event.ctrlKey && event.shiftKey) {
-				window.location.href = "/pages/praetorianpi.html";
-			}
-		}
-	</script>
 </body>
 
 </html>
