fix the wrong original song being named

--- a/pages/random-video.html
+++ b/pages/random-video.html
@@ -76,7 +76,7 @@
 				{ url: "rY-FJvRqK0E", comment: "Another meme song that's actually pretty dope too!" },
 				{ url: "qatmJtIJAPw", comment: "Original song is 'Dethklok - Face Fisted'" },
 				{ url: "I53HDr0-Qew", comment: "Original song is 'Dethklok - Murmaider'" },
-				{ url: "SDea7laHD4E", comment: "Original song is 'Small's Galaktikon II: Become the Storm - My Name is Murder'" },
+				{ url: "SDea7laHD4E", comment: "Original song is 'Dethklok - Awaken'" },
 				// { url: "HgEUbSzOTZ8", comment: `"We Are Trained Marxists" - Patrisse Cullors, Co-Founder, #BlackLivesMatter` },
 			];
 
