--- a/404.html
+++ b/404.html
@@ -64,10 +64,10 @@
 	</main>
 
 	<footer>
-		<div class=" copyright">
+		<div class=copyright>
 			&copy;<a href="https://www.youtube.com/watch?v=czgOWmtGVGs" style="text-decoration: none; color: #800;">12019</a>
-			&ndash; <a id=target-year href="http://updateyourfooter.com/" style="text-decoration: none; color: #800;">
-			</a>, <abbr
+			&ndash; <a id=target-year href="http://updateyourfooter.com/" style="text-decoration: none; color: #800;"></a>,
+			<abbr
 				title="Copyright is implicit, almost anywhere in the world! If you want to know more, wikipedia 'Berne Convention'"
 				style="text-decoration: none; color: #800;">Thaumatorium</abbr>
 			<p><sub>Last updated: <time id=updated>2020-07-03</time></sub></p>
@@ -86,6 +86,10 @@
 		<!-- Sssh - don't tell anyone! -->
 		<a class=secret onclick=specialGoto(event)
 			style="text-decoration: none; color:#800; cursor: default;font-family: sans-serif; font-size: small;">&#960;</a>
+		<div class=cookie-notification>
+			<p>This site uses cookies from Google to deliver its services and to analyze traffic.</p>
+			<button>OK</button>
+		</div>
 	</footer>
 	<script async src=pwa.js></script>
 </body>
