--- a/pages/about.html
+++ b/pages/about.html
@@ -62,10 +62,11 @@
 			<h4>The name</h4>
 			<p>It's based on the word <i>thaumaturge</i>, meaning <i>miracle worker</i>, thus <em>Thaumatorium</em> is where
 				miracles are performed.</p>
-			<h4>The reason</h4>
+			<h4>The reason - the why</h4>
 			<p>I wanted a place where I could post my articles, but I found my free <a
 					href="https://thaumatorium.wordpress.com/">Wordpress site</a> too slow, too bloated, too messy, so I started
 				to search for a way to still create and host articles, without needing bloat like Wordpress.</p>
+			<!-- <p>I also wanted to take an unnormal take on things</p> -->
 			<p>I started with thinking about using something like Angular and React. They were the hot new thing in town, so
 				why not try that? Turns out they both have a tendency to become pretty damn complex pretty damn fast - that's
 				my personal experience anyway.</p>
@@ -115,7 +116,8 @@
 			<p>Anyway, I'm thinking about banning Americans from my site too. I'm not going to accept people who are
 				retarded. People with mental disabilities are still welcome, ofcourse.</p>
 			<p>I'm also just so fucking done with racist shitheads that think it's OK to act racist against white humans,
-				because they are part of some minority &ndash; I'm looking at you WaPo, hiring Sarah Jeong and Karen Attiah. Fuck you too.</p>
+				because they are part of some minority &ndash; I'm looking at you WaPo, hiring Sarah Jeong and Karen Attiah.
+				Fuck you too.</p>
 			<p>PS: The definition of the word "Racism" is NOT "power + prejudice". That's a bullshit definition that should
 				stay in the trashheap that is sociology. I'll fucking yeet you from my site if you pull that shit on people
 				too.</p>
@@ -130,7 +132,6 @@
 			<p>The normies have invaded the internet. That's not necessarily bad, but what is is that they came in such
 				numbers they did not need to adapt to our netizenship and changed our internet culture. <em>For the worse</em>,
 				mind you. I hope to one day have enough influence to change that, for the betterment of humanity.</p>
-
 		</section>
 	</main>
 
