improve description of title, OpenGraph data, and intro text

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@ You can use http://validator.w3.org/i18n-checker/ to see if your header encoding
 For more information: https://www.w3.org/International/questions/qa-html-encoding-declarations#nonutf8
 -->
 	<!-- The title of the tab -->
-	<title>Thaumatorium</title>
+	<title>The Thaumatorium: NostraDavid's handcrafted articles and projects</title>
 	<!-- I used to use UTF-8 with BOM, but not EVERY file had a BOM, so I decided to switch back to using <meta charset=utf-8 /> -->
 	<meta charset=utf-8 />
 	<!-- <base href="https://thaumatorium.com/" /> -->
 	<base href=/ />
 	<!-- This description should show up in Google results -->
-	<meta name=description content="Where the Magic happens" />
+	<meta name=description
+		content="This is a handcrafted blog where you can find articles and projects created by NostraDavid." />
 	<!-- Theme color for Android/iOS -->
 	<meta name=theme-color content=#800 />
 	<!-- icon for Apple's hardware -->
@@ -44,9 +45,9 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 	<!-- General OpenGraph data - shared between Facebook and Twitter -->
 	<meta property="og:url" content="https://thaumatorium.com/" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="The Thaumatorium: Where the magic happens" />
+	<meta property="og:title" content="NostraDavid's handcrafted website, with his articles and projects" />
 	<meta property="og:description"
-		content="Eleanor Roosevelt said: &quot;Great minds discuss ideas, average minds discuss events, small minds discuss people.&quot; &ndash; Do the former, not the latter." />
+		content="A handcrafted blog where you can find articles and projects created by NostraDavid." />
 	<meta property="og:image" content="https://thaumatorium.com/images/opengraph-cover.png?v=1" />
 	<meta property="og:image:width" content="1280" />
 	<meta property="og:image:height" content="668" />
@@ -55,9 +56,9 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:site" content="@DavidNostra" />
 	<meta name="twitter:creator" content="@DavidNostra" />
-	<meta name="twitter:title" content="The Thaumatorium: Where the magic happens">
+	<meta name="twitter:title" content="NostraDavid's handcrafted website, with his articles and projects">
 	<meta name="twitter:description"
-		content="Eleanor Roosevelt said: &quot;Great minds discuss ideas, average minds discuss events, small minds discuss people.&quot; &ndash; Do the former, not the latter.">
+		content="A handcrafted blog where you can find articles and projects created by NostraDavid.">
 	<meta name="twitter:image" content="https://thaumatorium.com/images/opengraph-cover.png?v=1">
 	<meta name="twitter:image:width" value="1280" />
 	<meta name="twitter:image:height" value="668" />
@@ -98,32 +99,18 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 		<article>
 			<section>
 				<h2>Welcome to the Thaumatorium!</h2>
-				<p>
-					This is my personal, <strong>handcrafted</strong>, website, where I write my personal thoughts and post my
-					little projects.
-				<p>
-					Note that this site is pure uncompressed HTML/CSS/JS, with some PNG and WEBP images to fluff
-					shit up. I like to think that <strong>this is how the web is supposed to be</strong>, other than that these
-					are
+				<p>This is my handcrafted website, where I write articles and post my projects.
+				</p>
+				<p>Note that this site is pure uncompressed HTML/CSS/JS, with some PNG and WEBP images to fluff thing up. I like
+					to think that <strong>this is how the web is supposed to be</strong>. This site is (for now) a collection of
 					static pages instead of built up by some (C#/JS/PHP/Java) framework.
-				<p>
-					If you want an example on <em>how not to do HTML</em>, take a look at Twitter with their
-					<code>&lt;div&gt;&lt;div&gt;&lt;div&gt;divs&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;</code>
-					nonsense. Silly Twitter! That's not how you should use HTML!
-				<p>
-					This site's author is based in the Netherlands. I like to take an unnormal take on things: Look at what the
-					masses
-					are doing, learn from them by NOT doing that and then find out where the good shit is at.
-				<p>
-					That doesn't necessarily mean that popular = bad. It means that most programmers don't *really* care about
-					quality or speed - if not them, the company they work for.
-				<footer>
-					<p>
-						<strong>Disclaimer:</strong> I'm not perfect, so this file <em>will likely</em> contain small mistakes. If
-						you
-						find any, please open a <a href=https://github.com/Thaumatorium/thaumatorium.github.io/issues>Github
-							Issue</a>, whether it's just a spelling mistake or something wrong with the HTML.
-				</footer>
+				</p>
+				<p>Everything is handcrafted and <em>not</em> minified, something that's usually the case, so if you want to
+					figure out how something works, you can just go and check it out - right click on something and then click
+					"Inspect".
+				</p>
+				<p>If you want to know more about this site, check out the <a href="/pages/about.html">About</a> page.
+				</p>
 			</section>
 			<section>
 				<h2>TODO</h2>
