--- a/index.html
+++ b/index.html
@@ -32,12 +32,20 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 	<!-- The reason for the ?v=1 in the CSS url is Cache Busting. This gives me control over which file version is cached on the user's end -->
 	<!-- Lets imagine a user has my first version cached, and I make a change, but the expiry date of the file is a year into the future. I can simply up the number and the browser will replace the file (no matter whether I actually made a change or not) -->
 	<!-- Now I'm, as of writing, hosting on github.io and I have no control over the expiry date (which is 10 minutes, IIRC), but now I can remember myself to do this in the future once I go the self-hosting route :) -->
-	<link async rel=stylesheet href="/styles/layout.css?v=1" />
-	<link async rel=stylesheet href="/styles/header.css?v=1" />
-	<link async rel=stylesheet href="/styles/nav.css?v=1" />
-	<link async rel=stylesheet href="/styles/main.css?v=1" />
-	<link async rel=stylesheet href="/styles/footer.css?v=1" />
-	<link async rel=stylesheet href="/styles/cookie.css?v=1" />
+	<link rel="stylesheet" href="/styles/layout.css?v=1" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<link rel="stylesheet" href="/styles/header.css?v=1" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<link rel="stylesheet" href="/styles/nav.css?v=1" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<link rel="stylesheet" href="/styles/main.css?v=1" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<link rel="stylesheet" href="/styles/footer.css?v=1" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<link rel="stylesheet" href="/styles/cookie.css?v=1" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<noscript>
+		<link rel=stylesheet href="/styles/layout.css?v=1" />
+		<link rel=stylesheet href="/styles/header.css?v=1" />
+		<link rel=stylesheet href="/styles/nav.css?v=1" />
+		<link rel=stylesheet href="/styles/main.css?v=1" />
+		<link rel=stylesheet href="/styles/footer.css?v=1" />
+		<link rel=stylesheet href="/styles/cookie.css?v=1" />
+	</noscript>
 
 	<!-- If I ever make this site dynamically: FB uses a specific agent string (something like 'facebookexternalhit/1.1'). No need to show this to regular users. -->
 	<meta property="fb:app_id" content="939311653206712">
