fix twitter meta:
'value' is not a legal attr in 'meta' tag. Use 'content' instead.

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 	<meta name="twitter:description"
 		content="A handcrafted blog where you can find articles and projects created by NostraDavid.">
 	<meta name="twitter:image" content="https://thaumatorium.com/images/opengraph-cover.png?v=1">
-	<meta name="twitter:image:width" value="1280" />
-	<meta name="twitter:image:height" value="668" />
+	<meta name="twitter:image:width" content="1280" />
+	<meta name="twitter:image:height" content="668" />
 </head>
 
 <body>
