add clickable § to refer to title; move hr line into section

--- a/index.html
+++ b/index.html
@@ -123,7 +123,10 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 				</p>
 			</section>
 			<section>
-				<h2>TODO</h2>
+				<h2 id=todo>
+					<a href="#todo" class="self-link"></a>
+					TODO
+				</h2>
 				<ul>
 					<li>Add JSON/LD - Semantic Web stuff to the homepage</li>
 					<li>Verify that posts on Facebook/Twitter/Reddit look good</li>
@@ -177,6 +180,7 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 			</section>
 			<hr>
 			<section>
+				<hr>
 				<div id="hyvor-talk-view"></div>
 				<script type="text/javascript">
 					var HYVOR_TALK_WEBSITE = 1095; // DO NOT CHANGE THIS
