--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 					TODO
 				</h2>
 				<ul>
+					<li>Figure out why code block is invisible :(</li>
+					<li>Add <pre><code>'<a href="#todo" class="self-link">'</a></code></pre> to basically all headers.</li>
 					<li>Add JSON/LD - Semantic Web stuff to the homepage</li>
 					<li>Verify that posts on Facebook/Twitter/Reddit look good</li>
 					<li>Consider paypal.me</li>
@@ -178,7 +180,6 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 						ask?</figcaption>
 				</figure>
 			</section>
-			<hr>
 			<section>
 				<hr>
 				<div id="hyvor-talk-view"></div>
