--- a/index.html
+++ b/index.html
@@ -108,7 +108,10 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 	<main>
 		<article>
 			<section>
-				<h2>Welcome to the Thaumatorium!</h2>
+				<h2 id=welcome>
+					<a href="#welcome" class="self-link"></a>
+					Welcome to the Thaumatorium!
+				</h2>
 				<p>This is my handcrafted website, where I write articles and post my projects.
 				</p>
 				<p>Note that this site is pure uncompressed HTML/CSS/JS, with some PNG and WEBP images to fluff thing up. I like
@@ -127,41 +130,61 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 					<a href="#todo" class="self-link"></a>
 					TODO
 				</h2>
+				<p>The date you see is <q>date created</q>, not <q>edited</q> or <q>done</q></p>
 				<ul>
-					<li>Figure out why code block is invisible :(</li>
-					<li>Add <pre><code>'<a href="#todo" class="self-link">'</a></code></pre> to basically all headers.</li>
-					<li>Add JSON/LD - Semantic Web stuff to the homepage</li>
-					<li>Verify that posts on Facebook/Twitter/Reddit look good</li>
-					<li>Consider paypal.me</li>
-					<li>Consider Google Analytics - probably not though</li>
-					<li>Check my Spark files for article inspiration. I believe I was still going to write a letter to myself in
+					<li><time>2020-07-07</time> Add <code>&lt;a href="#todo" class="self-link"&gt;&lt;/a&gt;</code>
+						to basically all headers.</li>
+					<li><time>2020-07-07</time> Spread the OGP and Twitter card metadata around the other html files</li>
+					<li><time>2020-07-03</time> Add JSON/LD - Semantic Web stuff to the homepage</li>
+					<li><time>2020-07-03</time> Consider paypal.me</li>
+					<li><time>2020-07-03</time> Consider Google Analytics - probably not though</li>
+					<li><time>2020-07-03</time> Check my Spark files for article inspiration. I believe I was
+						still going to write a letter to myself in
 						2009 (about how and where to start with programming)</li>
-					<li>Gotta check out ARIA tags - they weren't really mentioned on WHATWG's Living Document</li>
-					<li><del>Fix the PWA functionality - if I update the HTML, it won't update the page on the client side</del>
+					<li><time>2020-05-09</time> Gotta check out ARIA tags - they weren't really mentioned on
+						WHATWG's Living Document</li>
+					<li><time>2020-07-06</time> <del>Figure out why code block is invisible :(</del> <ins>gotta
+							use &amp;lt; and &amp;gt; for HTML</ins></li>
+					<li><time>2020-07-06</time> <del>Verify that posts on Facebook/Twitter/Reddit look good</del>
+						<ins>dey look good!</ins></li>
+					<li><time>2020-07-06</time> <del>Fix the PWA functionality - if I update the HTML, it won't
+							update the page on the client side</del>
 					</li>
-					<li><del>Figure out how to update pages on the client side after an update</del></li>
-					<li><del>Redo the CSS - mobile looks weird</del><ins>Already (mostly) fixed it, without rewrite</ins></li>
-					<li><del>If you go to <code>#starfield</code>, via <code>#projects</code>, the starfield won't show</del></li>
-					<li><del>Put each article/blog in a separate file</del></li>
-					<li><del>Make it able to switch main article</del></li>
-					<li><del>Make thaumatorium.com functional</del></li>
-					<li><del>I broke the browser history (clicking back doesn't "refresh" the page) 😭</del></li>
-					<li><del>Add brightness and color to the <code>starfield</code></del></li>
-					<li><del>Make articles look a bit better</del></li>
-					<li><del>Turn the main tags into articles and stick them all into a &lt;main&gt;, perhaps that gets the layout
+					<li><time>2020-07-06</time> <del>Figure out how to update pages on the client side after an
+							update</del></li>
+					<li><time>2020-07-01</time> <del>Redo the CSS - mobile looks weird</del> <ins>Already
+							(mostly) fixed it, without rewrite</ins></li>
+					<li><time>2020-07-01</time> <del>If you go to <code>#starfield</code>, via
+							<code>#projects</code>, the starfield won't show</del></li>
+					<li><time>2020-05-09</time> <del>Put each article/blog in a separate file</del></li>
+					<li><time>2020-05-09</time> <del>Make it able to switch main article</del></li>
+					<li><time>2020-05-09</time> <del>Make thaumatorium.com functional</del></li>
+					<li><time>2020-05-09</time> <del>I broke the browser history (clicking back doesn't "refresh"
+							the page) 😭</del></li>
+					<li><time>2020-05-09</time> <del>Add brightness and color to the <code>starfield</code></del>
+					</li>
+					<li><time>2020-05-09</time> <del>Make articles look a bit better</del></li>
+					<li><time>2020-05-09</time> <del>Turn the main tags into articles and stick them all into a
+							&lt;main&gt;, perhaps that gets the layout
 							working</del></li>
-					<li><del>Center the main content</del></li>
-					<li><del>Create Mocking Spongebob generator</del></li>
-					<li><del>Create ROT13 generator</del></li>
-					<li><del>Gotta check out how to create a sitemap, if necessary. Make sure to include the <a
-								href=https://en.wikipedia.org/wiki/Sitemaps#Element_definitions>necessary tags</a></del></li>
-					<li><del>Make thaumatorium.com look good</del></li>
-					<li><del>Transfer my articles from my <a href=https://thaumatorium.wordpress.com>ye olde wordpress</a>
+					<li><time>2020-05-09</time> <del>Center the main content</del></li>
+					<li><time>2020-05-09</time> <del>Create Mocking Spongebob generator</del></li>
+					<li><time>2020-05-09</time> <del>Create ROT13 generator</del></li>
+					<li><time>2020-05-09</time> <del>Gotta check out how to create a sitemap, if necessary. Make
+							sure to include the <a href=https://en.wikipedia.org/wiki/Sitemaps#Element_definitions>necessary
+								tags</a></del></li>
+					<li><time>2020-05-09</time> <del>Make thaumatorium.com look good</del></li>
+					<li><time>2020-05-09</time> <del>Transfer my articles from my <a
+								href=https://thaumatorium.wordpress.com>ye olde wordpress</a>
 							site</del></li>
 				</ul>
 			</section>
 			<section>
-				<h2>Tools</h2>
+
+				<h2 id=tools>
+					<a href="#tools" class="self-link"></a>
+					Tools
+				</h2>
 				<p>Online tools that I regularly use</p>
 				<ul>
 					<li><a href="https://jakearchibald.github.io/svgomg/">SVGOMG</a></li>
@@ -202,7 +225,7 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 			<abbr
 				title="Copyright is implicit, almost anywhere in the world! If you want to know more, wikipedia 'Berne Convention'"
 				style="text-decoration: none; color: #800;">Thaumatorium</abbr>
-			<p><sub>Last updated: <time id=updated>2020-07-03</time></sub></p>
+			<p><sub>Last updated: <time id=updated>2020-07-03</time> </sub></p>
 		</div>
 		<nav>
 			<a href="https://www.reddit.com/user/nostradavid">Reddit profile</a>
