Make titles linkable

--- a/index.html
+++ b/index.html
@@ -191,7 +191,10 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 				</ul>
 			</section>
 			<section>
-				<h2>Support</h2>
+				<h2 id=support>
+					<a href="#support" class="self-link"></a>
+					Support
+				</h2>
 
 				<figure style="display: inline-block">
 					<a href=https://ko-fi.com/J3J61VMSC rel=noopener target=_blank>
