fix Fronpage URL in navbar

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 	</header>
 
 	<nav>
-		<a href>Frontpage</a>
+		<a href=/>Frontpage</a>
 		<span> - </span>
 		<a href=/pages/articles.html>Articles</a>
 		<span> - </span>
