--- a/pages/code-of-conduct.html
+++ b/pages/code-of-conduct.html
@@ -91,7 +91,7 @@
 			<button>OK</button>
 		</div>
 	</footer>
-	<script async src=pwa.js></script>
+	<script async src=/pwa.js></script>
 </body>
 
 </html>
