--- a/pages/about.html
+++ b/pages/about.html
@@ -171,7 +171,7 @@
 			<button>OK</button>
 		</div>
 	</footer>
-	<script async src=pwa.js></script>
+	<script async src=/pwa.js></script>
 </body>
 
 </html>
